--- a/desafios/d12/index.html
+++ b/desafios/d12/index.html
@@ -12,11 +12,11 @@
 
         .second {
             background: #fff url(imagens/background001.jpg) right bottom/cover fixed;
-            box-shadow: 4px 6px 13px 0px rgba(0, 0, 0, 0.543);
+            box-shadow: inset 4px 6px 13px 0px rgba(0, 0, 0, 0.543);
         }
         .five {
             background: #fff url(imagens/background002.jpg) right bottom/cover fixed; 
-            box-shadow: 4px 6px 13px 0px rgba(0, 0, 0, 0.543);
+            box-shadow: inset 4px 6px 13px 0px rgba(0, 0, 0, 0.543);
         }
     </style>
 </head>
