--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -52,9 +52,6 @@
             padding: 10px;
             border: 1px solid black;
         }
-        tfoot td {
-            border: none;
-        }
         
     </style>
 </head>
@@ -140,7 +137,7 @@
             <tfoot>
                 <tr>
                   <th scope="row">PORCENTAGEM</th>
-                  <td> 689.999.900%</td>  
+                  <td colspan="4"> 689.999.900%</td>  
                 </tr>
                 
 
