--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -15,7 +15,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quaerat deserunt veniam, repellat quibusdam corrupti ab saepe possimus animi, tempora doloribus. Ut ullam atque omnis eligendi similique corporis autem dolores.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod atque dolore fugit ea aut fuga sint pariatur, animi fugiat repellendus quas, unde recusandae? Iusto inventore quae quod iure nam quo.</p>
 
-    <iframe src="pag001.html" frameborder="0" width="500" height="400"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" width="500" height="400">
+        <p>Infelizmente seu navegador não é compativel</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur rerum mollitia in fuga ullam! Nesciunt possimus dolor fuga, minus, quo veritatis blanditiis quod provident aliquid, doloribus perspiciatis voluptate delectus quae! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, quo quam error voluptatem corrupti, ipsa similique quidem debitis sapiente et commodi illo soluta quis nulla minima, porro dolore provident nisi.</p>
 </body>
