--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -16,6 +16,22 @@
             <label for="Imedia">Media</label>
             <input type="number" name="" id="Imedia" min="0" max="10" step="0.1" value="5" required>
         </p>
+        <p>
+            <label for="Iperiod">Período Letivo</label>
+            <input type="month" name="" id="Iperio">
+        </p>
+        <p>
+            <label for="Idia">Dia da prova</label>
+            <input type="date" name="" id="Idia">
+        </p>
+        <p>
+            <label for="Ihora">Horário da prova</label>
+            <input type="time" name="" id="Ihora">
+        </p>
+        <p>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </p>
     </form>
 </body>
 </html>
